--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "dependencies": {
     "@apollo/client": "^3.3.21",
     "@apollo/react-hooks": "^4.0.0",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.11.2",
+    "@mui/material": "^5.5.1",
     "@reduxjs/toolkit": "^1.6.1",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
